--- a/QuoVue.html
+++ b/QuoVue.html
@@ -109,21 +109,32 @@ const app = new Vue(
 		},
 		addclk: function(){
 			this.knt++;
-			this.quos.push( new qitm) ;
+			this.quos.push( this.quo) ;
 			this.quos[this.knt].qno = this.knt
 			alert("adding");
+			this.quo = new qitm ;
 			this.tglRo();
 		},
 		ediclk: function(){
+			// check if there is a record to edit
+			// get the value of the record
+			// set quo to its value
 		   this.tglRo();
 		},
 		delclk: function(){
+			// check if there are records to delete
+			// ask for confirmation
+			// carry out the operation
 		   this.tglRo();	
 		},
 		prnclk: function(){
+			// check if there are records to print
+			// transfer to quo
+			// send for printing
 	           this.tglRo();	
 		},
 		clkSav: function(){
+			// check if the operation is add
 		  this.tglRo();
 		},
 		clkCanc: function(){
