--- a/QuoVue.html
+++ b/QuoVue.html
@@ -86,7 +86,8 @@ const app = new Vue(
 	{
 	el:"#wrp1",
 	data:{
-	  iflg: true ,
+		addflg: 0,
+	  	iflg: true ,
 		sel:0,
 		knt:-1,
 		quos:[],
@@ -108,6 +109,7 @@ const app = new Vue(
 		this.iflg = ! this.iflg ;
 		},
 		addclk: function(){
+			this.addflg = 0;
 			this.knt++;
 			this.quos.push( this.quo) ;
 			this.quos[this.knt].qno = this.knt
@@ -135,6 +137,10 @@ const app = new Vue(
 		},
 		clkSav: function(){
 			// check if the operation is add
+			if(this.addflg == 0) {
+				this.knt++ ;
+				this.quo.push(this.quo);
+
 		  this.tglRo();
 		},
 		clkCanc: function(){
